# Fibonacci

./: .env.example  .gitignore  .golangci.yml  ACADEMIQUE.md  AGENTS.md  ANALYSE_CODE.md  API.md  BUILD_OPTIMIZATIONS.md  BUILD_OPTIMIZED.sh  CHANGELOG.md  CODE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EVALUATION.md  EVALUATION_ACADEMIQUE.md  FINAL_SUMMARY.md  Fibonacci - Ingénierie en Go - Web.html  FibonacciFunction.go  FibonacciFunction.py  FibonacciFunction.rs  FibonacciFuntionMultiThread.go  FibonacciParallel.go  GUIDE_ETUDE.md  IMPROVEMENTS.md  Makefile  NOTES_TESTS.md  OPTIMISATIONS.fr.md  OPTIMISATIONS.md  OPTIMISATIONS_RESUMÉ.md  OPTIMIZATIONS_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_START.md  RAPPORT_EVALUATION.md  README.md  REFACTORING.md  REFACTORING_PLAN.md  RÉSUMÉ_FINAL.md  SUMMARY.md  VALIDATION_PRODUCTION.md  (+55 more)
.github/: dependabot.yml
.jules/: bolt.md
Binet/: Binet.go  README.md
Docs/: ARCHITECTURE.md  Algorithmique.txt  Architecture.txt  Diagramme de Séquence.uml  Evolution.md  INTERNAL_API.md  Livre Blanc.md  MONITORING.md  PERFORMANCE.md  RUST_MIGRATION_ANALYSIS.md  SECURITY.md  TROUBLESHOOTING.md
DoubBinetMat/: DoubBinetMat.go
Doubling/: Doubling.go  Doubling.py  FibonacciFunction.go  FibonacciFunction.py  FibonacciFunctionClaude.py  README.md  go.mod
DoublingParallel/: DoublingParallel.go  README.md  fibonacci_result.txt  go.mod  go.sum
DoublingParallel-ChatGPTCanvas/: README.md
DoublingParallelWeb/: DoublingParallelWeb.go  Experimentation.go  README.md
DoublingParallelWeb 2.0/: README.md
DoublingParallelWeb2/: DoublingParallelWeb.go
Experimentation/: Experimentation.go  README.md  fibonacci_result.txt  go.mod  go.sum
Experimentation - ChatGPT Canvas/: Experimentation.go
Experimentation - Claude.AI/: Experimentation.go  go.mod
Experimentation - Copie/: Experimentation.go
FibGo/: .dockerignore  (+5 more)
crates/fibrust-cli/: Cargo.toml
crates/fibrust-cli/tests/: cli_integration.rs
crates/fibrust-core/: Cargo.toml
crates/fibrust-core/src/: lib.rs
crates/fibrust-core/src/algo/: fast_doubling.rs  parallel.rs  progress.rs
crates/fibrust-core/tests/: fibonacci_properties.proptest-regressions  fibonacci_properties.rs
crates/fibrust-server/: Cargo.toml
crates/fibrust-server/src/: main_impl.rs
(+330 files in other folders)
