[package]
name = "fibrust-core"
version.workspace = true
edition.workspace = true
description = "High-performance Fibonacci algorithms - core library"

[dependencies]
ibig.workspace = true
rustfft.workspace = true
rayon.workspace = true
rug = { version = "1.24", optional = true }
serde = { version = "1.0", optional = true }

[features]
default = []
gmp = ["rug"]
serde = ["dep:serde"]

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fibonacci_bench"
harness = false
