[package]
name = "fibrust-server"
version.workspace = true
edition.workspace = true
description = "FibRust HTTP API server"

[[bin]]
name = "fibrust-server"
path = "src/main.rs"

[dependencies]
fibrust-core = { path = "../fibrust-core", features = ["serde"] }
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.1"
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
ibig.workspace = true
lru = "0.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1.0"
